commit test deploy

--- a/MNIST_LinearRegression_AWS.ipynb
+++ b/MNIST_LinearRegression_AWS.ipynb
@@ -782,6 +782,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Test deploy\n",
+    "index = 122\n",
+    "predict_prob = []\n",
+    "query_response_batch = query_endpoint(\n",
+    "    features[index:index+1].to_csv(header=False, index=False).encode(\"utf-8\")\n",
+    ")\n",
+    "predict_prob_batch = parse_response(query_response_batch)  # prediction probability per batch\n",
+    "predict_prob.append(predict_prob_batch)\n",
+    "\n",
+    "\n",
+    "predict_prob = np.concatenate(predict_prob, axis=0)\n",
+    "predict_label = np.argmax(\n",
+    "    predict_prob, axis=1\n",
+    ")\n",
+    "print(\"Label predict: \", predict_label)\n",
+    "print(\"Label thật: \", ground_truth_label.values[index])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
